<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.inkneko.nekowindow</groupId>
        <artifactId>nekowindow</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>service-auth</artifactId>
    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2022.0.4</spring-cloud.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.inkneko.nekowindow</groupId>
            <artifactId>common-base</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.inkneko.nekowindow</groupId>
            <artifactId>common-service-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.inkneko.nekowindow</groupId>
            <artifactId>api-auth</artifactId>
            <version>${project.version}</version>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>